--- a/thi/sanpham2.html
+++ b/thi/sanpham2.html
@@ -10,49 +10,78 @@
 </head>
 <body>
     <div class="wrapper">
-    <header>
-        <div class="containe">
-            <nav>
-                <div class="search-box">
-                    <input type="text" placeholder="Tìm kiếm...">
-                </div>
-                <div class="nav-links">
-                    <a href="cart.html">Giỏ hàng</a>
-                    <a href="login.html">Đăng Nhập</a>
-                    <a href="register.html">Đăng Ký</a>
-                </div>
-            </nav>
+        <header>
+            <div class="containe">
+                <nav>
+                    <div class="search-box">
+                        <input type="text" placeholder="Tìm kiếm...">
+                    </div>
+                    <div class="nav-links">
+                        <a href="cart.html">Giỏ hàng</a>
+                        <a href="login.html">Đăng Nhập</a>
+                        <a href="register.html">Đăng Ký</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <div class="menu">
+            <a href="index.html" class="menu-item">Trang chủ</a>
+            <a href="about.html" class="menu-item">Giới thiệu</a>
+            <a href="products.html" class="menu-item">Sản phẩm</a>
+            <a href="contact.html" class="menu-item">Liên hệ</a>
         </div>
-    </header>
-    <div class="menu">
-        <a href="index.html" class="menu-item">Trang chủ</a>
-        <a href="about.html" class="menu-item">Giới thiệu</a>
-        <a href="products.html" class="menu-item">Sản phẩm</a>
-        <a href="contact.html" class="menu-item">Liên hệ</a>
-    </div>
-    <div class="product-detail">
-        <img src="IMG/sanpham2.png" alt="Nước súc miệng">
-        <div class="product-info">
-            <h2>Nước súc miệng Pearlie White Fluorinze Anti-bacterial Fluoride 750ml chống lại vi khuẩn gây mảng bám sâu răng</h2>
-            <p>Giá: <span class="product-price">132.000đ / Chai</span></p>
-            <p>Danh mục:    Nước súc miệng</p>
-            <p>Quy cách: Chai</p>
-            <p>Xuất xứ thương hiệu: Singapore</p>
-            <p>Nhà sản xuất: CORLISON</p>
-            <p>Nước sản xuất: Singapore</p>
-            <p>Thành phần: Bacillus clausii</p>
-            <p>Mô tả ngắn: Nước súc miệng Pearlie White Fluorinze Anti-bacterial Fluoride được tạo ra bằng công thức không chứa cồn nhẹ nhàng với răng và nướu, giúp chống lại vi khuẩn gây mảng bám sâu răng và hơi thở có mùi, làm giảm và làm dịu sự khó chịu do cồn gây ra. Ngăn ngừa sâu răng và giúp men răng khỏe hơn. Giữ cho hơi thở thơm mát, bảo vệ nướu khỏe mạnh.</p>
-            <p>Số đăng ký: 2085/2024/ĐKSP</p>
-            <button>Thêm vào giỏ hàng</button>
-            <a href="pay.html">
-                <button>Mua ngay</button>
-            </a>
+        <div class="product-detail">
+            <img src="IMG/sanpham2.png" alt="Nước súc miệng">
+            <div class="product-info">
+                <h2>Nước súc miệng Pearlie White Fluorinze Anti-bacterial Fluoride 750ml chống lại vi khuẩn gây mảng bám sâu răng</h2>
+                <p>Giá: <span class="product-price">132.000đ / Chai</span></p>
+                <p>Danh mục:    Nước súc miệng</p>
+                <p>Quy cách: Chai</p>
+                <p>Xuất xứ thương hiệu: Singapore</p>
+                <p>Nhà sản xuất: CORLISON</p>
+                <p>Nước sản xuất: Singapore</p>
+                <p>Thành phần: Bacillus clausii</p>
+                <p>Mô tả ngắn: Nước súc miệng Pearlie White Fluorinze Anti-bacterial Fluoride được tạo ra bằng công thức không chứa cồn nhẹ nhàng với răng và nướu, giúp chống lại vi khuẩn gây mảng bám sâu răng và hơi thở có mùi, làm giảm và làm dịu sự khó chịu do cồn gây ra. Ngăn ngừa sâu răng và giúp men răng khỏe hơn. Giữ cho hơi thở thơm mát, bảo vệ nướu khỏe mạnh.</p>
+                <p>Số đăng ký: 2085/2024/ĐKSP</p>
+                <button>Thêm vào giỏ hàng</button>
+                <a href="pay.html">
+                    <button>Mua ngay</button>
+                </a>
+            </div>
         </div>
-    </div>
-
-    <footer>
-        <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
-    </footer>
+        <div class="product-block">
+            <h2 class="section-title"><img src="IMG/hot1.png" class="title-icon">Sản phẩm đề xuất</h2>
+            <div class="product-listp">
+                <div class="product-itemp">
+                    <a href="sanpham1.html"><img src="IMG/sanpham1.png" alt="Product 1"></a>
+                    <p class="product-name">Men vi sinh Enterogermina Gut Defense Sanofi</p>
+                    <p class="product-price">157.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham3.html"><img src="IMG/sanpham3.png" alt="Product 3"></a>
+                    <p class="product-name">Siro Bổ Phế Lábebé</p>
+                    <p class="product-price">60.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham18.html"><img src="IMG/sanpham18.png" alt="Product 14"></a>
+                    <p class="product-name">Thuốc Crestor</p>
+                    <p class="product-price">160.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham5.html"><img src="IMG/sanpham5.png" alt="Product 5"></a>
+                    <p class="product-name">Thuốc Telfor 60 DHG</p>
+                    <p class="product-price">1.300đ / Viên</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham6.html"><img src="IMG/sanpham6.png" alt="Product 6"></a>
+                    <p class="product-name">Bột Hapacol 150 DHG</p>
+                    <p class="product-price">34.800đ / Hộp</p>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
+        </footer>
         </div>
 </body>
 </html>
