--- a/thi/sanpham3.html
+++ b/thi/sanpham3.html
@@ -10,50 +10,79 @@
 </head>
 <body>
     <div class="wrapper">
-    <header>
-        <div class="containe">
-            <nav>
-                <div class="search-box">
-                    <input type="text" placeholder="Tìm kiếm...">
-                </div>
-                <div class="nav-links">
-                    <a href="cart.html">Giỏ hàng</a>
-                    <a href="login.html">Đăng Nhập</a>
-                    <a href="register.html">Đăng Ký</a>
-                </div>
-            </nav>
+        <header>
+            <div class="containe">
+                <nav>
+                    <div class="search-box">
+                        <input type="text" placeholder="Tìm kiếm...">
+                    </div>
+                    <div class="nav-links">
+                        <a href="cart.html">Giỏ hàng</a>
+                        <a href="login.html">Đăng Nhập</a>
+                        <a href="register.html">Đăng Ký</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <div class="menu">
+            <a href="index.html" class="menu-item">Trang chủ</a>
+            <a href="about.html" class="menu-item">Giới thiệu</a>
+            <a href="products.html" class="menu-item">Sản phẩm</a>
+            <a href="contact.html" class="menu-item">Liên hệ</a>
         </div>
-    </header>
-    <div class="menu">
-        <a href="index.html" class="menu-item">Trang chủ</a>
-        <a href="about.html" class="menu-item">Giới thiệu</a>
-        <a href="products.html" class="menu-item">Sản phẩm</a>
-        <a href="contact.html" class="menu-item">Liên hệ</a>
-    </div>
-    <div class="product-detail">
-        <img src="IMG/sanpham3.png" alt="Siro bổ phế">
-        <div class="product-info">
-            <h2>Siro Bổ Phế Lábebé 120ml hỗ trợ bổ phế, giảm ho, giảm đờm, giảm đau họng</h2>
-            <p>Giá: <span class="product-price">60.000đ / Hộp</span></p>
-            <p>Danh mục:    Tăng sức đề kháng, miễn dịch</p>
-            <p>Dạng bào chế: Siro</p>
-            <p>Quy cách: Hộp</p>
-            <p>Xuất xứ thương hiệu: Việt Nam</p>
-            <p>Nhà sản xuất: CÔNG TY CỔ PHẦN DƯỢC PHẨM PHARVINA</p>
-            <p>Nước sản xuất: Việt Nam</p>
-            <p>Thành phần: Mạch môn, Cát cánh, Cam thảo, Xuyên tâm liên, Dịch chiết lá Thường xuân, Keo Ong</p>
-            <p>Mô tả ngắn: Bổ Phế Lábebé hỗ trợ bổ phế, giúp giảm ho, giảm đờm, giảm đau họng, khản tiếng do viêm họng, viêm phế quản.</p>
-            <p>Số đăng ký: 2719/2024/ĐKSP</p>
-            <button>Thêm vào giỏ hàng</button>
-            <a href="pay.html">
-                <button>Mua ngay</button>
-            </a>
+        <div class="product-detail">
+            <img src="IMG/sanpham3.png" alt="Siro bổ phế">
+            <div class="product-info">
+                <h2>Siro Bổ Phế Lábebé 120ml hỗ trợ bổ phế, giảm ho, giảm đờm, giảm đau họng</h2>
+                <p>Giá: <span class="product-price">60.000đ / Hộp</span></p>
+                <p>Danh mục:    Tăng sức đề kháng, miễn dịch</p>
+                <p>Dạng bào chế: Siro</p>
+                <p>Quy cách: Hộp</p>
+                <p>Xuất xứ thương hiệu: Việt Nam</p>
+                <p>Nhà sản xuất: CÔNG TY CỔ PHẦN DƯỢC PHẨM PHARVINA</p>
+                <p>Nước sản xuất: Việt Nam</p>
+                <p>Thành phần: Mạch môn, Cát cánh, Cam thảo, Xuyên tâm liên, Dịch chiết lá Thường xuân, Keo Ong</p>
+                <p>Mô tả ngắn: Bổ Phế Lábebé hỗ trợ bổ phế, giúp giảm ho, giảm đờm, giảm đau họng, khản tiếng do viêm họng, viêm phế quản.</p>
+                <p>Số đăng ký: 2719/2024/ĐKSP</p>
+                <button>Thêm vào giỏ hàng</button>
+                <a href="pay.html">
+                    <button>Mua ngay</button>
+                </a>
+            </div>
         </div>
-    </div>
-
-    <footer>
-        <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
-    </footer>
+        <div class="product-block">
+            <h2 class="section-title"><img src="IMG/hot1.png" class="title-icon">Sản Phẩm đề xuất</h2>
+            <div class="product-listp">
+                <div class="product-itemp">
+                    <a href="sanpham2.html"><img src="IMG/sanpham2.png" alt="Product 2"></a>
+                    <p class="product-name">Nước súc miệng Pearlie White Fluorinze</p>
+                    <p class="product-price">132.000đ / Chai</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham1.html"><img src="IMG/sanpham1.png" alt="Product 1"></a>
+                    <p class="product-name">Men vi sinh Enterogermina Gut Defense Sanofi</p>
+                    <p class="product-price">157.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham18.html"><img src="IMG/sanpham18.png" alt="Product 14"></a>
+                    <p class="product-name">Thuốc Crestor</p>
+                    <p class="product-price">160.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham5.html"><img src="IMG/sanpham5.png" alt="Product 5"></a>
+                    <p class="product-name">Thuốc Telfor 60 DHG</p>
+                    <p class="product-price">1.300đ / Viên</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham6.html"><img src="IMG/sanpham6.png" alt="Product 6"></a>
+                    <p class="product-name">Bột Hapacol 150 DHG</p>
+                    <p class="product-price">34.800đ / Hộp</p>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
+        </footer>
         </div>
 </body>
 </html>
