--- a/thi/sanpham4.html
+++ b/thi/sanpham4.html
@@ -10,50 +10,79 @@
 </head>
 <body>
     <div class="wrapper">
-    <header>
-        <div class="containe">
-            <nav>
-                <div class="search-box">
-                    <input type="text" placeholder="Tìm kiếm...">
-                </div>
-                <div class="nav-links">
-                    <a href="cart.html">Giỏ hàng</a>
-                    <a href="login.html">Đăng Nhập</a>
-                    <a href="register.html">Đăng Ký</a>
-                </div>
-            </nav>
+        <header>
+            <div class="containe">
+                <nav>
+                    <div class="search-box">
+                        <input type="text" placeholder="Tìm kiếm...">
+                    </div>
+                    <div class="nav-links">
+                        <a href="cart.html">Giỏ hàng</a>
+                        <a href="login.html">Đăng Nhập</a>
+                        <a href="register.html">Đăng Ký</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <div class="menu">
+            <a href="index.html" class="menu-item">Trang chủ</a>
+            <a href="about.html" class="menu-item">Giới thiệu</a>
+            <a href="products.html" class="menu-item">Sản phẩm</a>
+            <a href="contact.html" class="menu-item">Liên hệ</a>
         </div>
-    </header>
-    <div class="menu">
-        <a href="index.html" class="menu-item">Trang chủ</a>
-        <a href="about.html" class="menu-item">Giới thiệu</a>
-        <a href="products.html" class="menu-item">Sản phẩm</a>
-        <a href="contact.html" class="menu-item">Liên hệ</a>
-    </div>
-    <div class="product-detail">
-        <img src="IMG/sanpham4.png" alt="Nhiệt kế">
-        <div class="product-info">
-            <h2>Nhiệt kế hồng ngoại Yuwell YT-1C đo nhiệt độ cơ thể</h2>
-            <p>Giá: <span class="product-price">472.000đ / Hộp</span></p>
-            <p>Danh mục:    Nhiệt  kế</p>
-            <p>Thời hạn bảo hành: 1 năm</p>
-            <p>Quy cách: Hộp</p>
-            <p>Xuất xứ thương hiệu: Trung Quốc</p>
-            <p>Nhà sản xuất: JIANGSU YUYUE</p>
-            <p>Nước sản xuất: Trung Quốc</p>
-            <p>Thành phần: Bacillus clausii</p>
-            <p>Mô tả ngắn: Nhiệt kế hồng ngoại Yuwell YT-1C được dùng để đo nhiệt độ cơ thể người và môi trường xung quanh. Sản phẩm đo không tiếp xúc, không dùng thủy ngân, đảm bảo an toàn hơn.</p>
-            <p>Số đăng ký: 240000987/PCBA-HCM</p>
-            <button>Thêm vào giỏ hàng</button>
-            <a href="pay.html">
-                <button>Mua ngay</button>
-            </a>
+        <div class="product-detail">
+            <img src="IMG/sanpham4.png" alt="Nhiệt kế">
+            <div class="product-info">
+                <h2>Nhiệt kế hồng ngoại Yuwell YT-1C đo nhiệt độ cơ thể</h2>
+                <p>Giá: <span class="product-price">472.000đ / Hộp</span></p>
+                <p>Danh mục:    Nhiệt  kế</p>
+                <p>Thời hạn bảo hành: 1 năm</p>
+                <p>Quy cách: Hộp</p>
+                <p>Xuất xứ thương hiệu: Trung Quốc</p>
+                <p>Nhà sản xuất: JIANGSU YUYUE</p>
+                <p>Nước sản xuất: Trung Quốc</p>
+                <p>Thành phần: Bacillus clausii</p>
+                <p>Mô tả ngắn: Nhiệt kế hồng ngoại Yuwell YT-1C được dùng để đo nhiệt độ cơ thể người và môi trường xung quanh. Sản phẩm đo không tiếp xúc, không dùng thủy ngân, đảm bảo an toàn hơn.</p>
+                <p>Số đăng ký: 240000987/PCBA-HCM</p>
+                <button>Thêm vào giỏ hàng</button>
+                <a href="pay.html">
+                    <button>Mua ngay</button>
+                </a>
+            </div>
         </div>
-    </div>
-
-    <footer>
-        <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
-    </footer>
+        <div class="product-block">
+            <h2 class="section-title"><img src="IMG/hot1.png" class="title-icon">Sản phẩm đề xuất</h2>
+            <div class="product-listp">
+                <div class="product-itemp">
+                    <a href="sanpham14.html"><img src="IMG/sanpham14.png" alt="Product 14"></a>
+                    <p class="product-name">Chai xịt Zuchi Family</p>
+                    <p class="product-price">29.000đ / Chai</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham11.html"><img src="IMG/sanpham11.png" alt="Product 11"></a>
+                    <p class="product-name">Máy xông khí dung nén khí Yuwell 403M</p>
+                    <p class="product-price">1.210.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham16.html"><img src="IMG/sanpham16.png" alt="Product 14"></a>
+                    <p class="product-name">Sữa bột CaloSure gold Vitadairy</p>
+                    <p class="product-price">408.000đ / Chai</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham12.html"><img src="IMG/sanpham12.png" alt="Product 12"></a>
+                    <p class="product-name">Sữa rửa mặt Reihaku Hatomugi Acne Care</p>
+                    <p class="product-price">87.200đ / Tuýp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham13.html"><img src="IMG/sanpham13.png" alt="Product 13"></a>
+                    <p class="product-name">Kem đánh răng Sensodyne Repair And Protect</p>
+                    <p class="product-price">90.000đ / Tuýp</p>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
+        </footer>
         </div>
 </body>
 </html>
