--- a/thi/sanpham7.html
+++ b/thi/sanpham7.html
@@ -10,50 +10,79 @@
 </head>
 <body>
     <div class="wrapper">
-    <header>
-        <div class="containe">
-            <nav>
-                <div class="search-box">
-                    <input type="text" placeholder="Tìm kiếm...">
-                </div>
-                <div class="nav-links">
-                    <a href="cart.html">Giỏ hàng</a>
-                    <a href="login.html">Đăng Nhập</a>
-                    <a href="register.html">Đăng Ký</a>
-                </div>
-            </nav>
+        <header>
+            <div class="containe">
+                <nav>
+                    <div class="search-box">
+                        <input type="text" placeholder="Tìm kiếm...">
+                    </div>
+                    <div class="nav-links">
+                        <a href="cart.html">Giỏ hàng</a>
+                        <a href="login.html">Đăng Nhập</a>
+                        <a href="register.html">Đăng Ký</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
+        <div class="menu">
+            <a href="index.html" class="menu-item">Trang chủ</a>
+            <a href="about.html" class="menu-item">Giới thiệu</a>
+            <a href="products.html" class="menu-item">Sản phẩm</a>
+            <a href="contact.html" class="menu-item">Liên hệ</a>
         </div>
-    </header>
-    <div class="menu">
-        <a href="index.html" class="menu-item">Trang chủ</a>
-        <a href="about.html" class="menu-item">Giới thiệu</a>
-        <a href="products.html" class="menu-item">Sản phẩm</a>
-        <a href="contact.html" class="menu-item">Liên hệ</a>
-    </div>
-    <div class="product-detail">
-        <img src="IMG/sanpham7.png" alt="Men vi sinh">
-        <div class="product-info">
-            <h2>Viên nén Orihiro Glucosamine 900 hỗ trợ làm trơn ổ khớp, hạn chế lão hóa khớp (900 viên)</h2>
-            <p>Giá: <span class="product-price">575.000đ / Hộp</span></p>
-            <p>Danh mục: Cơ xương khớp</p>
-            <p>Dạng bào chế: Viên nén</p>
-            <p>Quy cách: Hộp 900 Viên</p>
-            <p>Xuất xứ thương hiệu: Nhật Bản</p>
-            <p>Nhà sản xuất: Orihiro Plantdew Co.,Ltd</p>
-            <p>Nước sản xuất: Nhật Bản</p>
-            <p>Thành phần: Glucosamine HCl (từ tôm và cua), Phức hợp protein mucopolysaccharide, Collagen thủy phân lên men (nguồn gốc từ lợn), Dolomite, Bột dầu ăn, chiết xuất mầm đậu nành, Chiết xuất sụn gà, Men chứa kẽm, Vitamin B6, Vitamin B1, Hyaluronic acid phân tử lượng thấp, Folic Acid, Vitamin D</p>
-            <p>Mô tả ngắn: Orihiro Glucosamine 900 hỗ trợ làm trơn ổ khớp, hỗ trợ hạn chế lão hóa khớp. Hỗ trợ giảm triệu chứng đau khớp, khô khớp do viêm khớp, thoái hóa khớp.</p>
-            <p>Số đăng ký: 9821/2021/ĐKSP</p>
-            <button>Thêm vào giỏ hàng</button>
-            <a href="pay.html">
-                <button>Mua ngay</button>
-            </a>
+        <div class="product-detail">
+            <img src="IMG/sanpham7.png" alt="Men vi sinh">
+            <div class="product-info">
+                <h2>Viên nén Orihiro Glucosamine 900 hỗ trợ làm trơn ổ khớp, hạn chế lão hóa khớp (900 viên)</h2>
+                <p>Giá: <span class="product-price">575.000đ / Hộp</span></p>
+                <p>Danh mục: Cơ xương khớp</p>
+                <p>Dạng bào chế: Viên nén</p>
+                <p>Quy cách: Hộp 900 Viên</p>
+                <p>Xuất xứ thương hiệu: Nhật Bản</p>
+                <p>Nhà sản xuất: Orihiro Plantdew Co.,Ltd</p>
+                <p>Nước sản xuất: Nhật Bản</p>
+                <p>Thành phần: Glucosamine HCl (từ tôm và cua), Phức hợp protein mucopolysaccharide, Collagen thủy phân lên men (nguồn gốc từ lợn), Dolomite, Bột dầu ăn, chiết xuất mầm đậu nành, Chiết xuất sụn gà, Men chứa kẽm, Vitamin B6, Vitamin B1, Hyaluronic acid phân tử lượng thấp, Folic Acid, Vitamin D</p>
+                <p>Mô tả ngắn: Orihiro Glucosamine 900 hỗ trợ làm trơn ổ khớp, hỗ trợ hạn chế lão hóa khớp. Hỗ trợ giảm triệu chứng đau khớp, khô khớp do viêm khớp, thoái hóa khớp.</p>
+                <p>Số đăng ký: 9821/2021/ĐKSP</p>
+                <button>Thêm vào giỏ hàng</button>
+                <a href="pay.html">
+                    <button>Mua ngay</button>
+                </a>
+            </div>
         </div>
-    </div>
-
-    <footer>
-        <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
-    </footer>
+        <div class="product-block">
+            <h2 class="section-title"><img src="IMG/hot1.png" class="title-icon">Sản phẩm đề xuất</h2>
+            <div class="product-listp">
+                <div class="product-itemp">
+                    <a href="sanpham8.html"><img src="IMG/sanpham8.png" alt="Product 8"></a>
+                    <p class="product-name">Dung dịch LineaBon K2+D3 ErgoPharm</p>
+                    <p class="product-price">295.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham9.html"><img src="IMG/sanpham9.png" alt="Product 9"></a>
+                    <p class="product-name">Nước Hồng Sâm Cô Đặc Hongsamjin Everystick EX</p>
+                    <p class="product-price">1.200.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham10.html"><img src="IMG/sanpham10.png" alt="Product 10"></a>
+                    <p class="product-name">Thực phẩm bảo vệ sức khỏe NMN PQQ</p>
+                    <p class="product-price">6.675.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham15.html"><img src="IMG/sanpham15.png" alt="Product 14"></a>
+                    <p class="product-name">Viên uống LéAna Ocavill</p>
+                    <p class="product-price">540.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
+                    <a href="sanpham17.html"><img src="IMG/sanpham17.png" alt="Product 14"></a>
+                    <p class="product-name">Cốm Lacto Biomin Gold</p>
+                    <p class="product-price">108.000đ / Hộp</p>
+                </div>
+            </div>
+        </div>
+        <footer>
+            <div class="footer-text">Phạm Mạnh Tuấn KHMT K9 & Phạm Kim Thành KHMT K9</div>
+        </footer>
         </div>
 </body>
 </html>
