--- a/thi/sanpham8.html
+++ b/thi/sanpham8.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dung dịch LineaBon</title>
+    <title>Nước Hồng Sâm Cô Đặc Hongsamjin</title>
     <link rel="stylesheet" href="CSS/Styles.css">
     <link href="CSS/Shop.css" rel="stylesheet" />
     <link href="CSS/Infor.css" rel="stylesheet" />
@@ -31,20 +31,19 @@
             <a href="contact.html" class="menu-item">Liên hệ</a>
         </div>
         <div class="product-detail">
-            <img src="IMG/sanpham8.png" alt="Vitamin">
+            <img src="IMG/sanpham9.png" alt="Nước hồng sâm">
             <div class="product-info">
-                <h2>Dung dịch LineaBon K2+D3 ErgoPharm hỗ trợ bổ sung Vitamin (10ml)</h2>
-                <p>Giá: <span class="product-price">295.000đ / Hộp</span></p>
-                <p>Danh mục: Bổ sung Canxi & Vitamin D</p>
-                <p>Dạng bào chế: Dung dịch</p>
-                <p>Quy cách: Hộp</p>
-                <p>Xuất xứ thương hiệu: Úc</p>
-                <p>Nhà sản xuất: ERGOPHARM</p>
-                <p>Nước sản xuất: Slovenia</p>
-                <p>Thành phần: Vitamin D3, Vitamin K2</p>
-                <p>Mô tả ngắn: Dung dịch nhỏ giọt hỗ trợ tăng chiều cao cho bé LineaBon K2+D3 bổ sung Vitamin D3 và vitamin K2, giúp hấp thu canxi hiệu quả, cải thiện mật độ xương, giúp cho hệ xương và răng chắc khỏe.</p>
-                <p>Đối tượng sử dụng: Trẻ en</p>
-                <p>Số đăng ký: 240001288/PCBB-HCM</p>
+                <h2>Nước Hồng Sâm Cô Đặc Hongsamjin Everystick EX hỗ trợ bồi bổ cơ thể, tăng cường sức khỏe (30 gói x 10g)</h2>
+                <p>Giá: <span class="product-price">1.200.000đ / Hộp</span></p>
+                <p>Danh mục:  Thực phẩm - Đồ uống</p>
+                <p>Dạng bào chế: Hỗn hợp</p>
+                <p>Quy cách: Hộp 3 Hộp lẻ x 10 Gói x 10g</p>
+                <p>Xuất xứ thương hiệu: Hàn Quốc</p>
+                <p>Nhà sản xuất: HUONS NATURE THIRD FACTORY CO., LTD</p>
+                <p>Nước sản xuất: Hàn Quốc</p>
+                <p>Thành phần: Bạch chỉ Hàn Quốc, cây hoàng kỳ, rễ hoa mẫu đơn, cam thảo, quế Trung Quốc, cây koidzumi, cây makino, cây địa hoàng và phục linh</p>
+                <p>Mô tả ngắn: Hồng sâm cô đặc Hongsamjin Everystick EX là sản phẩm có sự kết hợp chiết xuất hồng sâm Hàn Quốc 6 năm tuổi cùng 9 thành phần cao cấp, quý hiếm như: Bạch chỉ Hàn Quốc, cây hoàng kỳ, rễ hoa mẫu đơn, cam thảo, quế Trung Quốc, cây koidzumi, cây makino, cây địa hoàng và phục linh, mang đến giá trị dinh dưỡng tuyệt vời với dạng thanh độc đáo, hiện đại và rất tiện lợi.</p>
+                <p>Đối tượng sử dụng: Người lớn, Trẻ em</p>
                 <button>Thêm vào giỏ hàng</button>
                 <a href="pay.html">
                     <button>Mua ngay</button>
@@ -55,14 +54,14 @@
             <h2 class="section-title"><img src="IMG/hot1.png" class="title-icon">Sản phẩm đề xuất</h2>
             <div class="product-listp">
                 <div class="product-itemp">
+                    <a href="sanpham8.html"><img src="IMG/sanpham8.png" alt="Product 8"></a>
+                    <p class="product-name">Dung dịch LineaBon K2+D3 ErgoPharm</p>
+                    <p class="product-price">295.000đ / Hộp</p>
+                </div>
+                <div class="product-itemp">
                     <a href="sanpham7.html"><img src="IMG/sanpham7.png" alt="Product 7"></a>
                     <p class="product-name">Viên nén Orihiro Glucosamine 900</p>
                     <p class="product-price">575.000đ / Hộp</p>
-                </div>
-                <div class="product-itemp">
-                    <a href="sanpham9.html"><img src="IMG/sanpham9.png" alt="Product 9"></a>
-                    <p class="product-name">Nước Hồng Sâm Cô Đặc Hongsamjin Everystick EX</p>
-                    <p class="product-price">1.200.000đ / Hộp</p>
                 </div>
                 <div class="product-itemp">
                     <a href="sanpham10.html"><img src="IMG/sanpham10.png" alt="Product 10"></a>
