--- a/shopee.html
+++ b/shopee.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<h2>📊 Phân tích Shopee CSV: Tổng AK & Số đơn hợp lệ</h2>
+<h2>📊 Phân tích Shopee affiliate</h2>
 
 <input type="file" id="csvFile" accept=".csv">
 <div id="result">Chưa có dữ liệu.</div>
