--- a/shopee.html
+++ b/shopee.html
@@ -65,7 +65,7 @@
 
         const resultText =
           `🔢 Tiền hoa hồng: ${totalAK.toLocaleString('vi-VN')} ₫\n` +
-          `📦 Số đơn hàng hợp lệ (không trùng): ${validOrderSet.size}`;
+          `📦 Số đơn hàng: ${validOrderSet.size}`;
         document.getElementById('result').innerText = resultText;
       }
     });
